Fixed big white space on the bottom of mobile devices

--- a/app/assets/stylesheets/framework_and_overrides.css.scss
+++ b/app/assets/stylesheets/framework_and_overrides.css.scss
@@ -92,13 +92,11 @@ section {
   margin-top: 20px;
   }
   
-  html, body {
-  background-color: #5F5F5F;
-}
 
 #mainbackground {
 
   background-color: #5F5F5F;
+  
   
   .container {
     position: absolute;
